2007-04-27 [wwp]	2.9.1cvs32

	* src/account.c
	* src/prefs_account.c
	* src/prefs_account.h
		Don't reflect accounts changes to the mainwindow when it's
		not necessary.

2007-04-27 [colin]	2.9.1cvs31

	* src/folder.c
		Freeze/thaw when sync'ing flags
	* src/imap.c
	* src/prefs_account.c
	* src/prefs_account.h
	* src/etpan/imap-thread.c
	* src/etpan/imap-thread.h
		Add a way to use UID FETCH instead
		of searches to fetch message lists
		and flags. More expensive towards
		bandwidth, less expensive towards
		server's CPU. Probably fixes 
		bug 1158, 'Scanning new folders on 
		Exchange 2007 extremely slow'.
		Patch 95% by Hoa.

2007-04-27 [paul]	2.9.1cvs30

	* src/mainwindow.c
	* src/prefs_logging.c
		improvements to english usage

2007-04-27 [colin]	2.9.1cvs29

	* src/imap.c
		Fix build without libetpan (my bad!)

2007-04-26 [colin]	2.9.1cvs28

	* src/imap.c
	* src/imap.h
		Fix uselessly exported function
	* src/textview.c
		Consider "- -- \n" as signature separator
		(that's what signature separators look like
		 in PGP/Inline signed mails)

2007-04-26 [colin]	2.9.1cvs27

	* configure.ac
		libetpan-0.49 is now required
	* src/procmime.c
		Fix double fetching of mails if
		first try failed
	* src/imap.c
		Make offline sync faster, by
		remembering last change time, and
		last sync time.

2007-04-26 [hoa]	2.9.1cvs26

	* src/imap.c
	* src/imap.h
	* src/mainwindow.c
	* src/toolbar.c
	* src/etpan/imap-thread.c
	* src/etpan/imap-thread.h
		cancellation of IMAP operations is now allowed.
		Fixes bug 1056, 'Possibility to 'cancel transfer' in IMAP'

2007-04-26 [colin]	2.9.1cvs25

	* src/folder.c
		Always fetch body+headers in folders that are
		synched for offline use, if "Synchronise as
		soon as possible" is set.
		Fixes bug 1200, 'Add option to always retrieve full 
		messages'

2007-04-25 [colin]	2.9.1cvs24

	* src/compose.c
		Fix bug 1198, 'Reply-all "disappearing" address bug 
		persists...'

2007-04-24 [colin]	2.9.1cvs23

	* src/folderview.c