@@ -2560,3 +2560,4 @@
 ( cvs diff -u -r 1.274.2.186 -r 1.274.2.187 src/mainwindow.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/prefs_logging.c;  ) > 2.9.1cvs30.patchset
 ( cvs diff -u -r 1.213.2.142 -r 1.213.2.143 src/folder.c;  cvs diff -u -r 1.179.2.170 -r 1.179.2.171 src/imap.c;  cvs diff -u -r 1.105.2.92 -r 1.105.2.93 src/prefs_account.c;  cvs diff -u -r 1.49.2.25 -r 1.49.2.26 src/prefs_account.h;  cvs diff -u -r 1.1.4.78 -r 1.1.4.79 src/etpan/imap-thread.c;  cvs diff -u -r 1.1.4.15 -r 1.1.4.16 src/etpan/imap-thread.h;  ) > 2.9.1cvs31.patchset
 ( cvs diff -u -r 1.61.2.61 -r 1.61.2.62 src/account.c;  cvs diff -u -r 1.105.2.93 -r 1.105.2.94 src/prefs_account.c;  cvs diff -u -r 1.49.2.26 -r 1.49.2.27 src/prefs_account.h;  ) > 2.9.1cvs32.patchset
+( cvs diff -u -r 1.61.2.62 -r 1.61.2.63 src/account.c;  cvs diff -u -r 1.56.2.51 -r 1.56.2.52 src/pop.c;  cvs diff -u -r 1.105.2.94 -r 1.105.2.95 src/prefs_account.c;  cvs diff -u -r 1.49.2.27 -r 1.49.2.28 src/prefs_account.h;  ) > 2.9.1cvs33.patchset
