@@ -277,7 +277,7 @@ static gint pop3_getrange_uidl_recv(Pop3Session *session, const gchar *data,
 		partial_recv = (gint)g_hash_table_lookup(
 					session->partial_recv_table, id);
 
-		if ((!session->ac_prefs->getall && recv_time != RECV_TIME_NONE)
+		if (recv_time != RECV_TIME_NONE
 		|| partial_recv != POP3_TOTALLY_RECEIVED) {
 			session->msg[num].received = 
 				(partial_recv != POP3_MUST_COMPLETE_RECV);
@@ -286,7 +286,7 @@ static gint pop3_getrange_uidl_recv(Pop3Session *session, const gchar *data,
 				session->new_msg_exist = TRUE;
 		}
 		if (!session->new_msg_exist &&
-		    (session->ac_prefs->getall || recv_time == RECV_TIME_NONE ||
+		    (recv_time == RECV_TIME_NONE ||
 		     session->ac_prefs->rmmail)) {
 			session->cur_msg = num;
 			session->new_msg_exist = TRUE;
