@@ -1,3 +1,13 @@
+2007-04-28 [colin]	2.9.1cvs33
+
+	* src/account.c
+	* src/pop.c
+	* src/prefs_account.c
+	* src/prefs_account.h
+		Drop the "Download all" preference. It's
+		stupidly useless and confuses people from
+		time to time.
+
 2007-04-27 [wwp]	2.9.1cvs32
 
 	* src/account.c
